# sc2-helper

./: .gitignore  .gitmodules  Cargo.toml  README.md  combat_environment.py  combat_upgrades.py  data_caching.py  game_info.json  generate_ids_from_stableId.py  generation_data.py  move.py  simulator.py  simulator_python.py  simulator_test.py  tech_tree.py  test.py  unit_info.py
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
rust_lib/: Cargo.toml  generate_ids_from_stableId.py  generation_data.py  move.py
rust_lib/src/: combat_predictor.rs  combat_unit.rs  data.rs  game_info.rs  generated_enums.rs  lib.rs
sc2/: game_data.py  unit.py  units.py
sc2/ids/: ability_id.py  unit_typeid.py  upgrade_id.py
sc2_helper/: combat_simulator.py  helper_functions.py  test.py
src/: combat_predictor.rs  combat_unit.rs  enums.rs  generated_enums.rs  lib.rs  unit_type_data.rs  weapon.rs
