
[package]
name = "sc2_helper"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "sc2_helper"
crate-type = ["cdylib"]

[dependencies]
enum-primitive-derive = "^0.2"
num-traits = "^0.2"
rand = "0.7.2"
lazy_static = "*"
#rayon ="*"
serde = { version = "1.0", features = ["derive"] }
#rustc-hash = "1.0.1"
#serde_json ="*"


[dependencies.pyo3]
version = "0.12.0"
features = ["extension-module"]

[profile.release]
opt-level = 3
debug=false
panic="abort"
lto = "fat"
codegen-units = 1




