[package]
name = "sc2_helper"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "sc2_helper"
crate-type = ["cdylib"]

[dependencies]
cute = "0.3.0"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
rand = "0.7.2"

[dependencies.pyo3]
#version = "0.8.2"
git = "https://github.com/PyO3/pyo3.git"
branch = "master"
features = ["extension-module"]

[dependencies.sc2-techtree]
git = "https://github.com/danielvschoor/sc2-techtree.git"
branch = "master"