
[package]
name = "sc2_helper"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "sc2_helper"
crate-type = ["cdylib"]

[dependencies]
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
rand = "0.7.2"
lazy_static = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json ="*"
rayon ="*"
rustc-hash = "1.0.1"

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]


[dependencies.sc2-techtree]
git = "https://github.com/danielvschoor/sc2-techtree.git"
branch = "master"


[profile.release]
opt-level = 3
debug=true
panic="abort"


